LPS-110783 portal-search-similar-results-web: gradlew buildLang

--- a/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_ar.properties
+++ b/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_ar.properties
@@ -27,6 +27,9 @@ min-term-freq-help=تعيين الحد الأدنى لتكرار المصطلح 
 min-word-length=أدنى طول للكلمة
 min-word-length-help=تعيين الحد الأدنى لطول الكلمة والذي دونه يتم تجاهل المصطلحات. في حالة تركه فارغًا، تكون القيمة الافتراضية غير مقيدة 0.
 more-like-this=المزيد مثل هذا
+portlet-display-template-description-similar-results-card=عرض نتائج مشابهة كـ شبكة من البطاقات. (Automatic Translation)
+portlet-display-template-description-similar-results-compact=عرض عنوان النتائج المشابهة فقط. (Automatic Translation)
+portlet-display-template-description-similar-results-list=عرض العنوان واسم المستخدم لمنشئه وتاريخ الإنشاء ونوع الأصل والوصف. (Automatic Translation)
 portlet-display-template-name-card-layout=مخطط البطاقة
 portlet-display-template-name-compact-layout=مخطط مضغوط
 portlet-display-template-name-list-layout=مخطط القائمة
