--- a/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_ca.properties
+++ b/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_ca.properties
@@ -27,6 +27,9 @@ min-term-freq-help=La freqüència mínima dels termes per sota de la qual els t
 min-word-length=Llargada mínima de paraula
 min-word-length-help=La llargada mínima de les paraules per sota de la qual els termes seran ignorats. L'antic nom min_word_len és obsolet. El valor per defecte és 0.
 more-like-this=Més com aquest
+portlet-display-template-description-similar-results-card=Mostra resultats similars com una quadrícula de targetes. (Automatic Translation)
+portlet-display-template-description-similar-results-compact=Visualitza només el títol de resultats similars. (Automatic Translation)
+portlet-display-template-description-similar-results-list=Visualitza el títol, el nom d'usuari del creador, la data de creació, el tipus d'actiu i la descripció. (Automatic Translation)
 portlet-display-template-name-card-layout=Disposició de la targeta
 portlet-display-template-name-compact-layout=Disposició compacta
 portlet-display-template-name-list-layout=Disposició de la llista
