--- a/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_de.properties
+++ b/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_de.properties
@@ -27,6 +27,9 @@ min-term-freq-help=Die Mindest-Termhäufigkeit, bei deren Unterschreiten Terme i
 min-word-length=Mindestwortlänge
 min-word-length-help=Die Mindestwortlänge, bei deren Unterschreiten Terme ignoriert werden. Der frühere Name min_word_len ist veraltet. Standard ist 0.
 more-like-this=Mehr ähnliche Ergebnisse
+portlet-display-template-description-similar-results-card=Display similar results as a grid of cards. (Automatic Copy)
+portlet-display-template-description-similar-results-compact=Display only the title of similar results. (Automatic Copy)
+portlet-display-template-description-similar-results-list=Display the title, creator's user name, creation date, asset type, and description. (Automatic Copy)
 portlet-display-template-name-card-layout=Kartenlayout
 portlet-display-template-name-compact-layout=Kompaktes Layout
 portlet-display-template-name-list-layout=Listenlayout
