--- a/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_es.properties
+++ b/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_es.properties
@@ -27,6 +27,9 @@ min-term-freq-help=Frecuencia mínima del término por debajo de la cual se omit
 min-word-length=Longitud mínima de palabra
 min-word-length-help=Longitud mínima de palabra por debajo de la cual se omitirán los términos. El nombre anterior (min_word_len) está en desuso. El valor por defecto es 0.
 more-like-this=Más resultados similares
+portlet-display-template-description-similar-results-card=Mostrar resultados similares como una cuadrícula de tarjetas. (Automatic Translation)
+portlet-display-template-description-similar-results-compact=Mostrar solo el título de resultados similares. (Automatic Translation)
+portlet-display-template-description-similar-results-list=Mostrar el título, el nombre de usuario del creador, la fecha de creación, el tipo de activo y la descripción. (Automatic Translation)
 portlet-display-template-name-card-layout=Diseño de tarjeta
 portlet-display-template-name-compact-layout=Diseño compacto
 portlet-display-template-name-list-layout=Diseño de lista
