--- a/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_fr.properties
+++ b/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_fr.properties
@@ -27,6 +27,9 @@ min-term-freq-help=Définissez la fréquence minimale en dessous de laquelle les
 min-word-length=Longueur minimale des mots
 min-word-length-help=Définissez la longueur minimale des mots en dessous de laquelle les termes sont ignorés. Si laissé vide, ce paramètre par défaut est 0.
 more-like-this=Autres similaires
+portlet-display-template-description-similar-results-card=Affichez des résultats similaires à une grille de cartes. (Automatic Translation)
+portlet-display-template-description-similar-results-compact=Affichez uniquement le titre de résultats similaires. (Automatic Translation)
+portlet-display-template-description-similar-results-list=Affichez le titre, le nom d'utilisateur du créateur, la date de création, le type d'actif et la description. (Automatic Translation)
 portlet-display-template-name-card-layout=Disposition de la carte
 portlet-display-template-name-compact-layout=Disposition compacte
 portlet-display-template-name-list-layout=Disposition en liste
