--- a/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_hi_IN.properties
@@ -27,6 +27,9 @@ min-term-freq-help=Set the minimum term frequency below which the terms from the
 min-word-length=Minimum Word Length
 min-word-length-help=Set the minimum word length below which the terms are ignored. If left blank, this defaults to 0.
 more-like-this=More Like This
+portlet-display-template-description-similar-results-card=कार्ड के ग्रिड के रूप में समान परिणाम प्रदर्शित करें। (Automatic Translation)
+portlet-display-template-description-similar-results-compact=केवल इसी तरह के परिणामों का शीर्षक प्रदर्शित करें। (Automatic Translation)
+portlet-display-template-description-similar-results-list=शीर्षक, निर्माता का उपयोगकर्ता नाम, निर्माण तिथि, परिसंपत्ति प्रकार और विवरण प्रदर्शित करें. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-compact-layout=Compact Layout
 portlet-display-template-name-list-layout=List Layout
