--- a/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_nl.properties
+++ b/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_nl.properties
@@ -27,6 +27,9 @@ min-term-freq-help=De minimale termfrequentie waaronder termen van het inputdocu
 min-word-length=Minimale woordlengte
 min-word-length-help=De minimale woordlengte waaronder termen worden genegeerd. De vroegere naam min_word_len is obsoleet. Standaard = 0.
 more-like-this=Meer van dit
+portlet-display-template-description-similar-results-card=Display similar results as a grid of cards. (Automatic Copy)
+portlet-display-template-description-similar-results-compact=Display only the title of similar results. (Automatic Copy)
+portlet-display-template-description-similar-results-list=Display the title, creator's user name, creation date, asset type, and description. (Automatic Copy)
 portlet-display-template-name-card-layout=Kaartlay-out
 portlet-display-template-name-compact-layout=Compacte lay-out
 portlet-display-template-name-list-layout=Lijstlay-out
