--- a/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_pt_BR.properties
@@ -27,6 +27,9 @@ min-term-freq-help=A frequência mínima de termo abaixo da qual os termos serã
 min-word-length=Comprimento mínimo de palavra
 min-word-length-help=O comprimento mínimo da palavra abaixo do qual os termos serão ignorados. O nome antigo min_word_len é obsoleto. Como padrão é 0.
 more-like-this=Mais resultados similares
+portlet-display-template-description-similar-results-card=Exibir resultados semelhantes como uma grade de cartões. (Automatic Translation)
+portlet-display-template-description-similar-results-compact=Exibir apenas o título de resultados semelhantes. (Automatic Translation)
+portlet-display-template-description-similar-results-list=Exibir o título, nome de usuário do criador, data de criação, tipo de ativo e descrição. (Automatic Translation)
 portlet-display-template-name-card-layout=Layout do cartão
 portlet-display-template-name-compact-layout=Layout compacto
 portlet-display-template-name-list-layout=Layout da lista
