--- a/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_pt_PT.properties
@@ -27,6 +27,9 @@ min-term-freq-help=Set the minimum term frequency below which the terms from the
 min-word-length=Minimum Word Length
 min-word-length-help=Set the minimum word length below which the terms are ignored. If left blank, this defaults to 0.
 more-like-this=More Like This
+portlet-display-template-description-similar-results-card=Exibir resultados semelhantes como uma grade de cartões. (Automatic Translation)
+portlet-display-template-description-similar-results-compact=Exibir apenas o título de resultados semelhantes. (Automatic Translation)
+portlet-display-template-description-similar-results-list=Exibir o título, nome de usuário do criador, data de criação, tipo de ativo e descrição. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-compact-layout=Compact Layout
 portlet-display-template-name-list-layout=List Layout
