--- a/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_sv.properties
+++ b/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_sv.properties
@@ -27,6 +27,9 @@ min-term-freq-help=Minsta termfrekvens under vilken termerna kommer att ignorera
 min-word-length=Minsta ordlängd
 min-word-length-help=Minsta ordlängd över vilken termerna kommer att ignoreras. Det gamla namnet min_word_len är inaktuellt. Standard är 0.
 more-like-this=Mer som detta
+portlet-display-template-description-similar-results-card=Display similar results as a grid of cards. (Automatic Copy)
+portlet-display-template-description-similar-results-compact=Display only the title of similar results. (Automatic Copy)
+portlet-display-template-description-similar-results-list=Display the title, creator's user name, creation date, asset type, and description. (Automatic Copy)
 portlet-display-template-name-card-layout=Kortlayout
 portlet-display-template-name-compact-layout=Kompakt layout
 portlet-display-template-name-list-layout=Listlayout
