--- a/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_th.properties
+++ b/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_th.properties
@@ -27,6 +27,9 @@ min-term-freq-help=Set the minimum term frequency below which the terms from the
 min-word-length=Minimum Word Length
 min-word-length-help=Set the minimum word length below which the terms are ignored. If left blank, this defaults to 0.
 more-like-this=More Like This
+portlet-display-template-description-similar-results-card=แสดงผลลัพธ์ที่คล้ายกันเป็นตารางของการ์ด (Automatic Translation)
+portlet-display-template-description-similar-results-compact=แสดงเฉพาะชื่อเรื่องของผลลัพธ์ที่คล้ายกัน (Automatic Translation)
+portlet-display-template-description-similar-results-list=แสดงชื่อ ชื่อผู้ใช้ของผู้สร้าง วันที่สร้าง ประเภทเนื้อหา และคําอธิบาย (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-compact-layout=Compact Layout
 portlet-display-template-name-list-layout=List Layout
