--- a/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_et.properties
+++ b/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_et.properties
@@ -27,6 +27,9 @@ min-term-freq-help=Set the minimum term frequency below which the terms from the
 min-word-length=Minimum Word Length
 min-word-length-help=Set the minimum word length below which the terms are ignored. If left blank, this defaults to 0.
 more-like-this=More Like This
+portlet-display-template-description-similar-results-card=Saate kuvada sarnased tulemused kaartide ruudustikuna. (Automatic Translation)
+portlet-display-template-description-similar-results-compact=Saate kuvada ainult sarnaste tulemite pealkirja. (Automatic Translation)
+portlet-display-template-description-similar-results-list=Saate kuvada pealkirja, looja kasutajanime, loomiskuupäeva, vara tüübi ja kirjelduse. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-compact-layout=Compact Layout
 portlet-display-template-name-list-layout=List Layout
