--- a/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_ko.properties
+++ b/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_ko.properties
@@ -27,6 +27,9 @@ min-term-freq-help=Set the minimum term frequency below which the terms from the
 min-word-length=Minimum Word Length
 min-word-length-help=Set the minimum word length below which the terms are ignored. If left blank, this defaults to 0.
 more-like-this=More Like This
+portlet-display-template-description-similar-results-card=비슷한 결과를 카드 그리드로 표시합니다. (Automatic Translation)
+portlet-display-template-description-similar-results-compact=비슷한 결과의 제목만 표시합니다. (Automatic Translation)
+portlet-display-template-description-similar-results-list=제목, 크리에이터의 사용자 이름, 생성 날짜, 자산 유형 및 설명을 표시합니다. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-compact-layout=Compact Layout
 portlet-display-template-name-list-layout=List Layout
