--- a/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_lt.properties
+++ b/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_lt.properties
@@ -27,6 +27,9 @@ min-term-freq-help=Set the minimum term frequency below which the terms from the
 min-word-length=Minimum Word Length
 min-word-length-help=Set the minimum word length below which the terms are ignored. If left blank, this defaults to 0.
 more-like-this=More Like This
+portlet-display-template-description-similar-results-card=Rodyti panašius rezultatus kaip kortelių tinklelį. (Automatic Translation)
+portlet-display-template-description-similar-results-compact=Rodyti tik panašių rezultatų pavadinimą. (Automatic Translation)
+portlet-display-template-description-similar-results-list=Rodyti pavadinimą, kūrėjo vartotojo vardą, sukūrimo datą, turto tipą ir aprašą. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-compact-layout=Compact Layout
 portlet-display-template-name-list-layout=List Layout
