--- a/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_nb.properties
+++ b/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_nb.properties
@@ -27,6 +27,9 @@ min-term-freq-help=Set the minimum term frequency below which the terms from the
 min-word-length=Minimum Word Length
 min-word-length-help=Set the minimum word length below which the terms are ignored. If left blank, this defaults to 0.
 more-like-this=More Like This
+portlet-display-template-description-similar-results-card=Vis lignende resultater som et rutenett med kort. (Automatic Translation)
+portlet-display-template-description-similar-results-compact=Vis bare tittelen på lignende resultater. (Automatic Translation)
+portlet-display-template-description-similar-results-list=Vis tittelen, skaperens brukernavn, opprettelsesdato, innholdselementtype og beskrivelse. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-compact-layout=Compact Layout
 portlet-display-template-name-list-layout=List Layout
