--- a/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_pl.properties
+++ b/modules/dxp/apps/portal-search-similar-results/portal-search-similar-results-web/src/main/resources/content/Language_pl.properties
@@ -27,6 +27,9 @@ min-term-freq-help=Set the minimum term frequency below which the terms from the
 min-word-length=Minimum Word Length
 min-word-length-help=Set the minimum word length below which the terms are ignored. If left blank, this defaults to 0.
 more-like-this=More Like This
+portlet-display-template-description-similar-results-card=Wyświetlaj podobne wyniki jako siatkę kart. (Automatic Translation)
+portlet-display-template-description-similar-results-compact=Wyświetl tylko tytuł podobnych wyników. (Automatic Translation)
+portlet-display-template-description-similar-results-list=Wyświetl tytuł, nazwę użytkownika twórcy, datę utworzenia, typ zasobu i opis. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-compact-layout=Compact Layout
 portlet-display-template-name-list-layout=List Layout
