--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_ar.properties
@@ -1,8 +1,9 @@
 add-marketing-categories=جميع فئات التسويق
 audience=الجمهور
 content-dashboard=لوحة معلومات المحتويات
-content-per-audience-and-stage-x=المحتوى حسب الجمهور والمرحلة ({0})
-content-x=المحتوى ({0})
+content-per-x=Content per {0} (Automatic Copy)
+content-per-x-and-x=Content per {0} and {1} (Automatic Copy)
+content-x=Content ({0}) (Automatic Copy)
 create-marketing-categories-to-label-and-audit-your-content=قم بإنشاء فئات تسويق لتسمية ومراجعة المحتوى الخاص بك.
 education=التعليم
 filter-by=تصفية حسب (Automatic Translation)
