--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_de.properties
@@ -1,8 +1,9 @@
 add-marketing-categories=Marketingkategorien hinzufügen
 audience=Zielgruppe
 content-dashboard=Inhalts-Dashboard
-content-per-audience-and-stage-x=Inhalt pro Zielgruppe und Phase ({0})
-content-x=Inhalt ({0})
+content-per-x=Content per {0} (Automatic Copy)
+content-per-x-and-x=Content per {0} and {1} (Automatic Copy)
+content-x=Content ({0}) (Automatic Copy)
 create-marketing-categories-to-label-and-audit-your-content=Erstellen Sie Marketingkategorien, um Ihren Inhalt zu bezeichnen und zu auditieren.
 education=Ausbildung
 filter-by=Filter By (Automatic Copy)
