--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_es.properties
@@ -1,8 +1,9 @@
 add-marketing-categories=Añadir categorías de marketing
 audience=Público
 content-dashboard=Panel de contenido
-content-per-audience-and-stage-x=Contenido por público y fase ({0})
-content-x=Contenido ({0})
+content-per-x=Content per {0} (Automatic Copy)
+content-per-x-and-x=Content per {0} and {1} (Automatic Copy)
+content-x=Content ({0}) (Automatic Copy)
 create-marketing-categories-to-label-and-audit-your-content=Crea categorías de marketing para etiquetar y auditar sus contenidos.
 education=Educación
 filter-by=Filtrar por (Automatic Translation)
