--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_fi.properties
@@ -1,8 +1,9 @@
 add-marketing-categories=Lisää Markkinointiluokat
 audience=Kohdeyleisö
 content-dashboard=Sisällön Koontinäyttö
-content-per-audience-and-stage-x=Sisältö Yleisön ja Vaiheen ({0}) mukaan
-content-x=Sisältö ({0})
+content-per-x=Content per {0} (Automatic Copy)
+content-per-x-and-x=Content per {0} and {1} (Automatic Copy)
+content-x=Content ({0}) (Automatic Copy)
 create-marketing-categories-to-label-and-audit-your-content=Luo markkinointiluokkia merkitäksesi ja auditoidaksesi sisältöäsi.
 education=Koulutus
 filter-by=Filter By (Automatic Copy)
