--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_fr.properties
@@ -1,8 +1,9 @@
 add-marketing-categories=Ajouter des catégories de marketing
 audience=Public
 content-dashboard=Tableau de bord du contenu
-content-per-audience-and-stage-x=Contenu par public et par étape ({0})
-content-x=Contenu ({0})
+content-per-x=Content per {0} (Automatic Copy)
+content-per-x-and-x=Content per {0} and {1} (Automatic Copy)
+content-x=Content ({0}) (Automatic Copy)
 create-marketing-categories-to-label-and-audit-your-content=Créez des catégories de marketing pour libeller et faire des audits de votre contenu.
 education=Éducation
 filter-by=Filtrer par (Automatic Translation)
