--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_hu.properties
@@ -1,8 +1,9 @@
 add-marketing-categories=Marketing-kategóriák hozzáadása
 audience=Közönség
 content-dashboard=Tartalom műszerfal
-content-per-audience-and-stage-x=Tartalom közönség és szakasz szerint ({0})
-content-x=Tartalom ({0})
+content-per-x=Content per {0} (Automatic Copy)
+content-per-x-and-x=Content per {0} and {1} (Automatic Copy)
+content-x=Content ({0}) (Automatic Copy)
 create-marketing-categories-to-label-and-audit-your-content=Hozzon létre marketing-kategóriákat tartalma felcímkézéséhez és auditjához.
 education=Oktatás
 filter-by=Szűrés (Automatic Translation)
