--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_ja.properties
@@ -1,8 +1,9 @@
 add-marketing-categories=マーケティングカテゴリを追加
 audience=オーディエンス
 content-dashboard=コンテンツダッシュボード
-content-per-audience-and-stage-x=オーディエンスとステージごとのコンテンツ ({0})
-content-x=コンテンツ ({0})
+content-per-x=Content per {0} (Automatic Copy)
+content-per-x-and-x=Content per {0} and {1} (Automatic Copy)
+content-x=Content ({0}) (Automatic Copy)
 create-marketing-categories-to-label-and-audit-your-content=コンテントにラベルを付与して監視するには、マーケティングカテゴリを作成してください。
 education=教育
 filter-by=Filter By (Automatic Copy)
