--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_nl.properties
@@ -1,8 +1,9 @@
 add-marketing-categories=Marketingcategorieën toevoegen
 audience=Doelgroep
 content-dashboard=Inhouddashboard
-content-per-audience-and-stage-x=Inhoud per publiek en fase ({0})
-content-x=Inhoud ({0})
+content-per-x=Content per {0} (Automatic Copy)
+content-per-x-and-x=Content per {0} and {1} (Automatic Copy)
+content-x=Content ({0}) (Automatic Copy)
 create-marketing-categories-to-label-and-audit-your-content=Maak marketingcategorieën om uw inhoud te labelen en controleren.
 education=Educatie
 filter-by=Filter By (Automatic Copy)
