--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_sv.properties
@@ -1,8 +1,9 @@
 add-marketing-categories=Lägg till marknadsföringskategorier
 audience=Målgrupp
 content-dashboard=Instrumentpanel för innehåll
-content-per-audience-and-stage-x=Innehåll efter målgrupp och nivå ({0})
-content-x=Innehåll ({0})
+content-per-x=Content per {0} (Automatic Copy)
+content-per-x-and-x=Content per {0} and {1} (Automatic Copy)
+content-x=Content ({0}) (Automatic Copy)
 create-marketing-categories-to-label-and-audit-your-content=Skapa marknadsföringskategorier för att sätta etikett på och granska ditt innehåll.
 education=Utbildning
 filter-by=Filter By (Automatic Copy)
