--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_ca.properties
@@ -1,8 +1,9 @@
 add-marketing-categories=Afegiu categories de màrqueting
 audience=Públic
 content-dashboard=Tauler de contingut
-content-per-audience-and-stage-x=Contingut per audiència i fase ({0})
-content-x=Contingut ({0})
+content-per-x=Content per {0} (Automatic Copy)
+content-per-x-and-x=Content per {0} and {1} (Automatic Copy)
+content-x=Content ({0}) (Automatic Copy)
 create-marketing-categories-to-label-and-audit-your-content=Creeu categories de màrqueting per etiquetar i auditar el contingut.
 education=Educació
 filter-by=Filtrar per (Automatic Translation)
