--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_en_GB.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_en_GB.properties
@@ -1,7 +1,8 @@
 add-marketing-categories=Add Marketing Categories (Automatic Copy)
 audience=Audience (Automatic Copy)
 content-dashboard=Content Dashboard (Automatic Copy)
-content-per-audience-and-stage-x=Content per Audience and Stage ({0}) (Automatic Copy)
+content-per-x=Content per {0} (Automatic Copy)
+content-per-x-and-x=Content per {0} and {1} (Automatic Copy)
 content-x=Content ({0}) (Automatic Copy)
 create-marketing-categories-to-label-and-audit-your-content=Create marketing categories to label and audit your content. (Automatic Copy)
 education=Education (Automatic Copy)
