--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_lo.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_lo.properties
@@ -1,8 +1,9 @@
 add-marketing-categories=Add Marketing Categories
 audience=Audience (Automatic Copy)
 content-dashboard=Content Dashboard
-content-per-audience-and-stage-x=Content per Audience and Stage ({0})
-content-x=Content ({0})
+content-per-x=Content per {0} (Automatic Copy)
+content-per-x-and-x=Content per {0} and {1} (Automatic Copy)
+content-x=Content ({0}) (Automatic Copy)
 create-marketing-categories-to-label-and-audit-your-content=Create marketing categories to label and audit your content.
 education=Education (Automatic Copy)
 filter-by=Filter By (Automatic Copy)
