--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_pt_BR.properties
@@ -1,8 +1,9 @@
 add-marketing-categories=Adicionar categorias de marketing
 audience=Público-alvo
 content-dashboard=Painel de conteúdo
-content-per-audience-and-stage-x=Conteúdo por audiência e fase ({0})
-content-x=Conteúdo ({0})
+content-per-x=Content per {0} (Automatic Copy)
+content-per-x-and-x=Content per {0} and {1} (Automatic Copy)
+content-x=Content ({0}) (Automatic Copy)
 create-marketing-categories-to-label-and-audit-your-content=Criar categorias de marketing para rotular e auditar seu conteúdo.
 education=Educação
 filter-by=Filtrar por (Automatic Translation)
