--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_zh_CN.properties
@@ -1,8 +1,9 @@
 add-marketing-categories=添加营销类别
 audience=受众
 content-dashboard=内容仪表板
-content-per-audience-and-stage-x=按受众和阶段的内容 ({0})
-content-x=内容 ({0})
+content-per-x=Content per {0} (Automatic Copy)
+content-per-x-and-x=Content per {0} and {1} (Automatic Copy)
+content-x=Content ({0}) (Automatic Copy)
 create-marketing-categories-to-label-and-audit-your-content=创建营销类别以标记和审核您的内容。
 education=教育
 filter-by=筛选者 (Automatic Translation)
