LPS-77699 Update Translations

--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_es.properties
@@ -9,7 +9,7 @@ action.MANAGE_ORGANIZATIONS=Administrar organizaciones
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Administrar cuentas de suborganizaciones
 action.VIEW_ORGANIZATIONS=Ver organizaciones
 action.VIEW_USERS=Ver usuarios
-add-account-group=Add Account Group (Automatic Copy)
+add-account-group=Añadir grupo de cuentas
 add-account-role=Añadir rol de cuenta
 add-domain=Añadir dominio
 add-new-user-to-x=Añadir nuevo usuario a {0}
