--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_es.properties
@@ -6,7 +6,7 @@ an-entry-was-updated=Se ha actualizado una entrada.
 any-field-added-to-the-object-or-to-a-form-view-appears-here=Aquí se mostrarán todos los campos añadidos al objeto o a una vista de formulario.
 app-builder=Generador de aplicaciones
 app-permissions=Permisos de aplicación
-applications-and-site-menu=Applications and Site Menu (Automatic Copy)
+applications-and-site-menu=Aplicaciones y menú del sitio
 apps=Aplicaciones
 choose-options=Seleccionar opciones
 choose-sites=Seleccionar sitios
@@ -23,7 +23,7 @@ delete-from-object=Eliminar del objeto
 deploy-a-standalone-app-with-a-direct-link=Permite implementar una aplicación independiente con un enlace directo.
 deploy-a-widget=Permite implementar un widget.
 deploy-as=Implementar como
-deploy-into-applications-or-a-site-menu=Deploy into applications or a site menu. (Automatic Copy)
+deploy-into-applications-or-a-site-menu=Implemente en aplicaciones o en un menú de sitio.
 deployed=Implementado
 deployed-as=Implementado como
 deployment-type=Tipo de implementación
