--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_es.properties
@@ -24,4 +24,4 @@ the-asset-subtype-no-longer-exists=El subtipo del activo ya no existe.
 the-category-x-and-parent-category-should-not-be-the-same=La categoría {0} y categoría matriz no deben ser la misma.
 the-vocabulary-could-not-be-found=La categoría no ha sido encontrada.
 there-are-no-vocabularies=No hay vocabularios.
-vocabularies-are-needed-to-create-categories=Se necesitan vocabularios para crear categorías. (Automatic Translation)
+vocabularies-are-needed-to-create-categories=Los vocabularios se necesitan para crear categorías.
