--- a/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-editable/src/main/resources/content/Language_es.properties
+++ b/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-editable/src/main/resources/content/Language_es.properties
@@ -8,4 +8,4 @@ example-rich-text=Texto enriquecido de ejemplo
 example-text=Texto de ejemplo
 you-must-define-a-unique-id-for-each-editable-element=Debe definir un identificador único para cada elemento editable.
 you-must-define-a-valid-type-for-each-editable-element=Debe definir un tipo válido por cada elemento editable.
-you-must-define-all-required-attributes-x-for-each-editable-element=You must define all required attributes ({0}) for each editable element. (Automatic Copy)
+you-must-define-all-required-attributes-x-for-each-editable-element=Debe definir todos los atributos obligatorios ({0}) de cada elemento editable.
