--- a/modules/apps/frontend-taglib/frontend-taglib-clay/src/main/resources/content/Language_es.properties
+++ b/modules/apps/frontend-taglib/frontend-taglib-clay/src/main/resources/content/Language_es.properties
@@ -1,13 +1,13 @@
 add-filter=Añadir filtro
 edit-filter=Editar filtro
 final-price=Precio final
-no-filters=Sin filtros (Automatic Translation)
+no-filters=Sin filtros
 no-filters-were-found=No se encontraron filtros.
-no-items=Sin artículos (Automatic Translation)
+no-items=Sin elementos
 no-items-were-found=No se encontraron artículos.
-price-summary=Priice Resumen (Automatic Translation)
+price-summary=Resumen de precios
 reset-filters=Restablecer filtros
 set-filters=Definir filtros
-table-data=Datos de la tabla (Automatic Translation)
+table-data=Datos de la tabla
 table-data-updated=Datos de tabla actualizados
 unexpected-error=Error inesperado
