--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_es.properties
@@ -111,7 +111,7 @@ from-your-computer=Desde el equipo
 ftl[stands-for]=FreeMarker
 group-id=Identificador del grupo
 import-file=Importar archivo
-import-translation=Traducción de importación (Automatic Translation)
+import-translation=Importar traducción
 in-order-to-preview-your-changes,-the-web-content-is-saved-as-a-draft=Para que pueda visualizar las alteraciones, el contenido de la web se guarda como borrador. ¿Está seguro de que desea hacerlo?
 index-all-article-versions-enabled=Índice de todas las versiones del artículo habilitado
 javax.portlet.description.com_liferay_journal_web_portlet_JournalPortlet=Un contenido web puede ser cualquier contenido que quiera añadir a un sitio, tales como artículos, un FAQ o una noticia. Los administradores pueden gestionar el contenido, así como asignar roles de usuarios y permisos. Los usuarios pueden añadir, editar, aprobar o ver el contenido dependiendo de su rol.
@@ -201,7 +201,7 @@ please-select-an-existing-small-image=Por favor, seleccione una imagen pequeña 
 please-select-an-existing-structure=Por favor, seleccione una estructura existente.
 please-select-an-existing-template=Por favor, seleccione una plantilla existente.
 please-select-one-option=Seleccione una opción.
-please-upload-your-translation-file=Cargue su archivo de traducción (.xliff, .xlf). (Automatic Translation)
+please-upload-your-translation-file=Cargue el archivo de traducción (.xliff, .xlf).
 presentation-settings=Configuración de la presentación
 preview-draft=Vista previa de borrador
 preview-draft-in-page=Vista previa de borrador en la página
@@ -268,7 +268,7 @@ the-folder-you-selected-does-not-allow-this-type-of-structure.-please-select-a-d
 the-selected-web-content-was-deleted=Se eliminó el contenido web seleccionado.
 the-selected-web-content-was-moved-to-the-recycle-bin=El contenido web seleccionado se movió a la Papelera de reciclaje.
 the-structure-you-selected-is-not-valid-for-this-folder=El tipo de documento seleccionado no es válido para esta carpeta.
-the-translation-file-x-does-not-correspond-to-this-web-content=The translation file ({0}) does not correspond to this web content. (Automatic Copy)
+the-translation-file-x-does-not-correspond-to-this-web-content=El archivo de traducción ({0}) no se corresponde con este contenido web.
 the-web-content-article-x-was-moved-to-the-recycle-bin=El artículo de contenido web <strong><em>{0}</em></strong> se movió a la Papelera de reciclaje.
 there-are-no-journal-images=No hay ninguna imagen de contenido web.
 there-are-no-structures=No hay estructuras.
