--- a/modules/apps/layout/layout-seo-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/layout/layout-seo-web/src/main/resources/content/Language_es.properties
@@ -7,7 +7,7 @@ enable-open-graph-description=Habilite esta opción para insertar las etiquetas 
 field-validation-failed=No se pudo validar un campo personalizado.
 html-title=Título HTML
 html-title-help=Este texto se aplicará en la etiqueta meta del título, dentro de la sección de encabezado de la página. La longitud recomendada es inferior a 60 caracteres.
-map-a-x-field-it-will-be-used-as-x=Map a {0} field, it will be used as {1}. (Automatic Copy)
+map-a-x-field-it-will-be-used-as-x=Asigne un campo de {0} que se usará como {1}.
 no-value-is-defined-for-field-x=No se ha definido ningún valor para el campo {0}.
 open-graph=Open Graph
 open-graph-alt-description=Descripción alternativa
