--- a/modules/apps/product-navigation/product-navigation-global-menu-api/src/main/resources/content/Language_es.properties
+++ b/modules/apps/product-navigation/product-navigation-global-menu-api/src/main/resources/content/Language_es.properties
@@ -1,3 +1,3 @@
-enable-global-menu=Enable Global Apps Menu (Automatic Copy)
-enable-global-menu-description=When enabled, global Control Panel applications are removed from the left-hand Product Menu and stored in a Global Apps Menu, which you can access from the grid menu icon in the upper-right corner. (Automatic Copy)
-global-menu-instance-configuration-name=Global Apps Menu (Automatic Copy)
+enable-global-menu=Habilitar menú global de aplicaciones
+enable-global-menu-description=Al habilitar esta opción, las aplicaciones globales del Panel de control se quitarán del menú de productos de la izquierda y se almacenarán en un menú global de aplicaciones disponible en el icono de menú de cuadrícula (en la esquina superior derecha).
+global-menu-instance-configuration-name=Menú global de aplicaciones
