--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_es.properties
@@ -13,7 +13,7 @@ displayed-assets-must-match-these-custom-user-profile-attributes=Los activos mos
 displayed-assets-must-match-these-rules=Los activos mostrados deben coincidir con estas reglas.
 does-not-contain=No contiene
 dynamic-selection=Selección dinámica
-edit-display-page-template=Edit Display Page Template (Automatic Copy)
+edit-display-page-template=Editar plantilla de página de visualización
 filter-by-field=Filtrar por campo
 javax.portlet.title.com_liferay_asset_list_web_portlet_AssetListPortlet=Conjuntos de contenidos
 manual-selection=Selección manual
@@ -38,6 +38,6 @@ there-are-no-collection-providers=There are no collection providers. (Automatic 
 there-are-no-collection-usages=No hay usos de la colección.
 there-are-no-collections=No hay ninguna colección.
 there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
-view-display-page=View Display Page (Automatic Copy)
+view-display-page=Ver página de visualización
 view-items=View Items (Automatic Copy)
 view-usages=Ver usos
