--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_es.properties
@@ -6,10 +6,10 @@ content-x=Contenido ({0})
 create-marketing-categories-to-label-and-audit-your-content=Crea categorías de marketing para etiquetar y auditar sus contenidos.
 education=Educación
 filter-by=Filtrar por (Automatic Translation)
-filter-by-author=Filtrar por autor (Automatic Translation)
+filter-by-author=Filtrar por autor
 filter-by-status=Filtrar por estado
 javax.portlet.title.com_liferay_content_dashboard_web_portlet_ContentDashboardAdminPortlet=Panel de contenido
-select-author=Seleccionar autor (Automatic Translation)
+select-author=Seleccionar autor
 site-or-asset-library=Sitio o biblioteca de activos (Automatic Translation)
 solution=Solución
 there-is-no-content=No hay contenidos.
