--- a/modules/apps/questions/questions-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/questions/questions-web/src/main/resources/content/Language_es.properties
@@ -25,7 +25,7 @@ latest-edited=Edición más reciente
 latest-usage=Último uso: {0}
 mark-as-answer=Marcar como respuesta
 my-activity=Mi actividad
-my-subscriptions=Mis suscripciones (Automatic Translation)
+my-subscriptions=Mis suscripciones
 number-of-replies=Número de respuestas
 post-answer=Publicar respuesta
 post-your-question=Publicar su pregunta
